Project manufacturing_erp_01_system_administration_integration {
  database_type: 'PostgreSQL'
  Note: 'Manufacturing ERP 01-system-administration-integration module. Source: live PostgreSQL schema after Flyway V65 (add entity name to audit logs). External tables are relationship-only stubs.'
}

Table users {
  user_id uuid [pk, not null, default: `gen_random_uuid()`]
  username varchar(100) [not null, unique]
  email varchar(255) [not null, unique]
  password varchar(255) [not null]
  status varchar(20) [not null, default: 'ACTIVE']
  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz [not null, default: `now()`]
  created_by uuid
  updated_by uuid
  version bigint [default: 0]
  auth_version bigint [not null, default: 0]
}

Table companies {
  company_id uuid [pk, not null, default: `gen_random_uuid()`]
  code varchar(100) [not null, unique]
  name varchar(255) [not null]
  status varchar(20) [not null, default: 'ACTIVE']
  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz [not null, default: `now()`]
  created_by uuid
  updated_by uuid
  version bigint [default: 0]

  checks {
    `status::text = ANY (ARRAY['ACTIVE'::character varying, 'INACTIVE'::character varying]::text[])` [name: 'chk_companies_status']
  }
}

Table plants {
  plant_id uuid [pk, not null, default: `gen_random_uuid()`]
  company_id uuid [not null]
  code varchar(100) [not null]
  name varchar(255) [not null]
  timezone varchar(100) [not null, default: 'Asia/Ho_Chi_Minh']
  status varchar(20) [not null, default: 'ACTIVE']
  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz [not null, default: `now()`]
  created_by uuid
  updated_by uuid
  version bigint [default: 0]

  indexes {
    (company_id, code) [unique, name: 'uk_plants_company_code']
  }

  checks {
    `status::text = ANY (ARRAY['ACTIVE'::character varying, 'INACTIVE'::character varying]::text[])` [name: 'chk_plants_status']
  }
}

Table warehouses {
  warehouse_id uuid [pk, not null, default: `gen_random_uuid()`]
  plant_id uuid [not null]
  code varchar(100) [not null]
  name varchar(255) [not null]
  type varchar(50) [not null, default: 'GENERAL']
  status varchar(20) [not null, default: 'ACTIVE']
  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz [not null, default: `now()`]
  created_by uuid
  updated_by uuid
  version bigint [default: 0]

  indexes {
    (plant_id, code) [unique, name: 'uk_warehouses_plant_code']
  }

  checks {
    `status::text = ANY (ARRAY['ACTIVE'::character varying, 'INACTIVE'::character varying]::text[])` [name: 'chk_warehouses_status']
    `type::text = ANY (ARRAY['RAW_MATERIAL'::character varying, 'WIP'::character varying, 'FINISHED_GOODS'::character varying, 'QUALITY'::character varying, 'SCRAP'::character varying, 'GENERAL'::character varying]::text[])` [name: 'chk_warehouses_type']
  }
}

Table permissions {
  permission_id uuid [pk, not null, default: `gen_random_uuid()`]
  code varchar(120) [not null, unique]
  resource varchar(80) [not null]
  action varchar(80) [not null]
  description text
  status varchar(20) [not null, default: 'ACTIVE']
  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz [not null, default: `now()`]
  created_by uuid
  updated_by uuid
  version bigint [default: 0]

  indexes {
    (resource, action) [unique, name: 'uk_permissions_resource_action']
  }

  checks {
    `status::text = ANY (ARRAY['ACTIVE'::character varying, 'INACTIVE'::character varying]::text[])` [name: 'chk_permissions_status']
  }
}

Table roles {
  role_id uuid [pk, not null, default: `gen_random_uuid()`]
  name varchar(100) [not null]
  description text
  company_id uuid
  code varchar(100) [not null]
  is_system boolean [not null, default: false]
  status varchar(20) [not null, default: 'ACTIVE']
  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz [not null, default: `now()`]
  created_by uuid
  updated_by uuid
  version bigint [default: 0]

  checks {
    `(upper(btrim(code::text)) <> ALL (ARRAY['ADMIN'::text, 'ROLE_ADMIN'::text])) OR is_system = true AND company_id IS NULL` [name: 'chk_roles_reserved_admin_authoritative']
    `status::text = ANY (ARRAY['ACTIVE'::character varying, 'INACTIVE'::character varying]::text[])` [name: 'chk_roles_status']
  }
}

Table role_permissions {
  role_id uuid [not null]
  permission_id uuid [not null]
  created_at timestamptz [not null, default: `now()`]

  indexes {
    (role_id, permission_id) [pk, name: 'role_permissions_pkey']
  }
}

Table access_scopes {
  scope_id uuid [pk, not null, default: `gen_random_uuid()`]
  code varchar(120) [not null, unique]
  name varchar(255) [not null]
  scope_type varchar(50) [not null]
  description text
  status varchar(20) [not null, default: 'ACTIVE']
  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz [not null, default: `now()`]
  created_by uuid
  updated_by uuid
  version bigint [default: 0]

  checks {
    `status::text = ANY (ARRAY['ACTIVE'::character varying, 'INACTIVE'::character varying]::text[])` [name: 'chk_access_scopes_status']
    `scope_type::text = ANY (ARRAY['GLOBAL'::character varying, 'COMPANY'::character varying, 'PLANT'::character varying, 'WAREHOUSE_GROUP'::character varying, 'CUSTOM'::character varying]::text[])` [name: 'chk_access_scopes_type']
  }
}

Table access_scope_resources {
  scope_resource_id uuid [pk, not null, default: `gen_random_uuid()`]
  scope_id uuid [not null]
  resource_type varchar(50) [not null]
  resource_id uuid [not null, note: 'Polymorphic logical target: companies, plants, or warehouses; no physical FK by design.']
  created_at timestamptz [not null, default: `now()`]

  indexes {
    (scope_id, resource_type, resource_id) [unique, name: 'uk_scope_resource']
  }

  checks {
    `resource_type::text = ANY (ARRAY['COMPANY'::character varying, 'PLANT'::character varying, 'WAREHOUSE'::character varying]::text[])` [name: 'chk_scope_resource_type']
  }
}

Table user_role_assignments {
  assignment_id uuid [pk, not null, default: `gen_random_uuid()`]
  user_id uuid [not null]
  role_id uuid [not null]
  scope_id uuid [not null]
  status varchar(20) [not null, default: 'ACTIVE']
  expires_at timestamptz
  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz [not null, default: `now()`]
  created_by uuid
  updated_by uuid
  version bigint [default: 0]

  checks {
    `status::text = ANY (ARRAY['ACTIVE'::character varying, 'INACTIVE'::character varying]::text[])` [name: 'chk_user_role_assignments_status']
  }
}

Table user_roles {
  user_id uuid [not null]
  role_id uuid [not null]

  indexes {
    (user_id, role_id) [pk, name: 'user_roles_pkey']
  }
}

Table audit_logs {
  audit_id uuid [pk, not null, default: `gen_random_uuid()`]
  user_id uuid [note: 'Logical users.user_id; nullable and intentionally not constrained by a physical FK.']
  username varchar(100)
  action varchar(100) [not null]
  entity_type varchar(100)
  entity_id varchar(255) [note: 'Polymorphic audited entity identifier; no physical FK by design.']
  description text
  status varchar(20) [not null, default: 'SUCCESS']
  client_ip varchar(45)
  user_agent varchar(512)
  trace_id varchar(32)
  created_at timestamptz [not null, default: `now()`]
  plant_id uuid
  entity_name varchar(255)
}

Table audit_log_changes {
  change_id uuid [pk, not null, default: `gen_random_uuid()`]
  audit_id uuid [not null]
  field_name varchar(150) [not null]
  old_value jsonb
  new_value jsonb
  change_type varchar(30) [not null]
  created_at timestamptz [not null, default: `now()`]

  checks {
    `change_type::text = ANY (ARRAY['CREATE'::character varying, 'UPDATE'::character varying, 'DELETE'::character varying]::text[])` [name: 'chk_audit_log_changes_type']
  }
}

Table import_profiles {
  profile_id uuid [pk, not null, default: `gen_random_uuid()`]
  code varchar(100) [not null, unique]
  name varchar(255) [not null]
  target_type varchar(40) [not null]
  company_id uuid
  sheet_name varchar(255)
  header_row_index integer [not null, default: 0]
  first_data_row_index integer [not null, default: 1]
  mappings jsonb [not null]
  status varchar(20) [not null, default: 'ACTIVE']
  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz [not null, default: `now()`]
  created_by uuid
  updated_by uuid
  version bigint [default: 0]

  checks {
    `header_row_index >= 0 AND first_data_row_index > header_row_index` [name: 'chk_import_profiles_rows']
    `status::text = ANY (ARRAY['ACTIVE'::character varying, 'INACTIVE'::character varying]::text[])` [name: 'chk_import_profiles_status']
  }
}

Table import_runs {
  import_run_id uuid [pk, not null, default: `gen_random_uuid()`]
  code varchar(40) [not null, unique]
  target_type varchar(40) [not null]
  profile_id uuid
  company_id uuid [not null]
  original_filename varchar(255) [not null]
  file_size_bytes bigint [not null]
  detected_headers jsonb [not null]
  status varchar(20) [not null, default: 'PARSING']
  total_rows integer [not null, default: 0]
  valid_rows integer [not null, default: 0]
  error_rows integer [not null, default: 0]
  applied_rows integer [not null, default: 0]
  failed_rows integer [not null, default: 0]
  parsed_at timestamptz
  validated_at timestamptz
  applied_at timestamptz
  error_message text
  idempotency_key varchar(120) [unique]
  payload_hash varchar(64)
  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz [not null, default: `now()`]
  created_by uuid
  updated_by uuid
  version bigint [default: 0]
  plant_id uuid
  warehouse_id uuid
  file_sha256 varchar(64) [not null]

  checks {
    `status::text = ANY (ARRAY['PARSING'::character varying, 'PARSED'::character varying, 'VALIDATING'::character varying, 'VALIDATED'::character varying, 'APPLYING'::character varying, 'APPLIED'::character varying, 'PARTIALLY_APPLIED'::character varying, 'FAILED'::character varying, 'CANCELLED'::character varying]::text[])` [name: 'chk_import_runs_status']
    `total_rows >= 0 AND valid_rows >= 0 AND error_rows >= 0 AND applied_rows >= 0 AND failed_rows >= 0` [name: 'chk_import_runs_totals']
  }
}

Table import_rows {
  import_row_id uuid [pk, not null, default: `gen_random_uuid()`]
  import_run_id uuid [not null]
  row_number integer [not null]
  raw_cells jsonb [not null]
  mapped_values jsonb
  status varchar(20) [not null, default: 'PENDING']
  errors jsonb
  created_entity_id uuid [note: 'Polymorphic identifier of the entity created by the import row.']

  indexes {
    (import_run_id, row_number) [unique, name: 'uk_import_rows_run_row']
  }

  checks {
    `status::text = ANY (ARRAY['PENDING'::character varying, 'VALID'::character varying, 'ERROR'::character varying, 'APPLIED'::character varying, 'FAILED'::character varying, 'SKIPPED'::character varying]::text[])` [name: 'chk_import_rows_status']
  }
}

Ref access_scope_resources_scope_id_fkey: access_scope_resources.scope_id > access_scopes.scope_id [delete: cascade]
Ref audit_log_changes_audit_id_fkey: audit_log_changes.audit_id > audit_logs.audit_id [delete: cascade]
Ref audit_logs_plant_id_fkey: audit_logs.plant_id > plants.plant_id
Ref import_profiles_company_id_fkey: import_profiles.company_id > companies.company_id
Ref import_rows_import_run_id_fkey: import_rows.import_run_id > import_runs.import_run_id [delete: cascade]
Ref import_runs_company_id_fkey: import_runs.company_id > companies.company_id
Ref import_runs_plant_id_fkey: import_runs.plant_id > plants.plant_id
Ref import_runs_profile_id_fkey: import_runs.profile_id > import_profiles.profile_id
Ref import_runs_warehouse_id_fkey: import_runs.warehouse_id > warehouses.warehouse_id
Ref plants_company_id_fkey: plants.company_id > companies.company_id
Ref role_permissions_permission_id_fkey: role_permissions.permission_id > permissions.permission_id [delete: cascade]
Ref role_permissions_role_id_fkey: role_permissions.role_id > roles.role_id [delete: cascade]
Ref fk_roles_company: roles.company_id > companies.company_id
Ref user_role_assignments_role_id_fkey: user_role_assignments.role_id > roles.role_id
Ref user_role_assignments_scope_id_fkey: user_role_assignments.scope_id > access_scopes.scope_id
Ref user_role_assignments_user_id_fkey: user_role_assignments.user_id > users.user_id [delete: cascade]
Ref user_roles_role_id_fkey: user_roles.role_id > roles.role_id [delete: cascade]
Ref user_roles_user_id_fkey: user_roles.user_id > users.user_id [delete: cascade]
Ref warehouses_plant_id_fkey: warehouses.plant_id > plants.plant_id

TableGroup module_01_system_administration_integration {
  users
  companies
  plants
  warehouses
  permissions
  roles
  role_permissions
  access_scopes
  access_scope_resources
  user_role_assignments
  user_roles
  audit_logs
  audit_log_changes
  import_profiles
  import_runs
  import_rows
}

